--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - run: alias python3=python
-      - run: chmod +x install.sh
+      - run: python -m pip install -r requirements.txt
 
-      - run: ./install.sh
-      - run: npm run lint
-      - run: npm run build
-      - run: npm run test
+      - run: yarn install --immutable --ignore-optional
+      - run: yarn run lint
+      - run: yarn run build
+      - run: yarn run test
