--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - run: alias python3=python
       - run: python -m pip install -r requirements.txt
 
-      - run: yarn install --immutable --ignore-optional
+      - run: yarn install --immutable --ignore-optional --ignore-platform
       - run: yarn run lint
       - run: yarn run build
       - run: yarn run test
