--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: yarn install --immutable --ignore-optional
+      #TODO: yarn install --immutable --ignore-optional
+      - run: npm install
       - run: yarn run build
       - run: yarn run deploy --application_id=${{ secrets.APPLICATION_ID }} --application_token=${{ secrets.APPLICATION_TOKEN }}
