--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@discordjs/rest": "1.3.0",
-    "@types/node": "18.11.7",
-    "@types/node-cron": "3.0.4",
+    "@types/node": "18.11.9",
+    "@types/node-cron": "3.0.5",
     "@types/sharp": "0.31.0",
-    "discord-api-types": "0.37.14",
+    "copyfiles": "2.4.1",
+    "discord-api-types": "0.37.16",
     "dotenv": "16.0.3",
     "pino": "8.7.0",
+    "rimraf": "3.0.2",
     "typescript": "4.8.4",
     "xo": "0.52.4"
   },
@@ -42,7 +44,7 @@
   },
   "scripts": {
     "lint": "xo",
-    "build": "tsc",
+    "build": "rimraf dist/ && tsc && copyfiles -u 1 scripts/**/*.py dist/scripts",
     "deploy": "node dist/deploy.js"
   },
   "xo": {
