--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - run: ./install.sh
+      - run: install.sh
 
       - run: yarn install --immutable --ignore-optional
       - run: yarn run lint
