--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "mongodb": "4.11.0",
     "node-cron": "3.0.2",
     "sharp": "0.31.2",
-    "sodium-native": "3.4.1",
-    "ytpl": "2.3.0",
-    "ytsr": "3.8.0"
+    "sodium-native": "3.4.1"
   },
   "devDependencies": {
     "@discordjs/rest": "1.3.0",
