--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "@types/node": "18.11.9",
     "@types/node-cron": "3.0.6",
     "@types/sharp": "0.31.0",
-    "discord-api-types": "0.37.18",
-    "rimraf": "3.0.2",
+    "discord-api-types": "0.37.19",
     "typescript": "4.9.3",
-    "xo": "0.53.0"
+    "xo": "0.53.1"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.7",
@@ -41,7 +40,7 @@
   },
   "scripts": {
     "lint": "xo",
-    "build": "rimraf dist/ && tsc",
+    "build": "tsc",
     "deploy": "node dist/deploy.js"
   },
   "xo": {
