--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@discordjs/rest": "1.4.0",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.10",
     "@types/node-cron": "3.0.6",
     "@types/sharp": "0.31.0",
     "typescript": "4.9.3",
@@ -53,6 +53,7 @@
     "rules": {
       "default-case": "off",
       "getter-return": "off",
+      "max-params": "off",
       "@typescript-eslint/naming-convention": "off",
       "@typescript-eslint/no-implicit-any-catch": "off",
       "n/file-extension-in-import": "off"
