--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": true,
 
     // Language and Environment
-    "target": "ESNext",
+    "target": "ES2022",
   },
   "include": ["src/**/*.ts"]
 }
