--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@discordjs/rest": "1.4.0",
-    "@types/node": "18.11.12",
+    "@types/node": "18.11.15",
     "@types/node-cron": "3.0.6",
     "@types/sharp": "0.31.0",
     "typescript": "4.9.4",
@@ -51,11 +51,8 @@
     ],
     "rules": {
       "default-case": "off",
-      "getter-return": "off",
-      "max-params": "off",
       "@typescript-eslint/naming-convention": "off",
-      "@typescript-eslint/no-implicit-any-catch": "off",
-      "n/file-extension-in-import": "off"
+      "@typescript-eslint/no-implicit-any-catch": "off"
     }
   }
 }
